--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,7 @@
     <title> {{ title }} </title>
 
     {% else %}
-    <title> Welcome to The Game Changer! </title>
+    <title> Welcome to  The Lyrics Blog</title>
 
     {% endif %}
 
