--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -23,13 +23,13 @@
 
             <div class="col-sm-5 col-md-5 col-lg-5" style="text-align: center;">
 
-                <h1> The Game Changer! </h1>
+                <h1> The Lyrics blog </h1>
                 <br>
 
     <p style="font-size: 25px;">
-        Great minds reason together. 
+        Appreciate the power of music with us.
     <br>
-        Become part of us!
+        
     </p>
 
      </div>
