edit registration template

--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -25,12 +25,12 @@
 
             <div class="col-md-5" style="text-align: center;">
 
-                <h1> The Game Changer! </h1>
+                <h1> The Lyric Blog </h1>
 
                 <p style="font-size: 16px;">
-                    Great Minds Reason together
+                    Acknowledging the power of music in our lives
                     <br>
-                    Become part of us!
+                    Let's share lyrics that have shaped us
                 </p>
 
                
